# python-trading-bot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
alpaca_bot/: cli.py  config.py  tui.py
alpaca_bot/brokers/alpaca/: client.py  stream.py
alpaca_bot/core/: events.py  models.py  utils.py
alpaca_bot/data/: cache.py
alpaca_bot/execution/: portfolio.py  router.py
alpaca_bot/risk/: manager.py
alpaca_bot/strategy/: base.py  loader.py
alpaca_bot/web/: api.py
docs/: TECHNICAL_BRIEF.md
strategies/: composite.py  moving_average.py  rsi_reversion.py  scalping.py  swing.py
tests/: __init__.py  conftest.py  test_alpaca_client.py  test_alpaca_stream.py  test_cache.py  test_cli.py  test_config.py  test_events.py  test_execution.py  test_models.py  test_risk_manager.py  test_strategies.py  test_strategy_loader.py  test_tui.py  test_utils.py  test_web_api.py
