[project]
name = "alpaca-bot"
version = "0.1.0"
description = "Async Alpaca trading bot"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "typer[all]>=0.16.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.9",
    "fastapi>=0.110,<0.116",
    "httpx>=0.27,<0.28",
    "websockets>=15",
    "pyyaml>=6",
]

[project.scripts]
alpaca-bot = "alpaca_bot.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
web = [
    "uvicorn",
]

[tool.pytest.ini_options]
addopts = "-q --cov=alpaca_bot"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
